# perfect-square-permutations

./: .gitignore  Cargo.toml
benches/: operations_benchmark.rs
src/: files.rs  lahc.rs  lib.rs  main.rs  operations.rs
